--- a/TrailSync/package.json
+++ b/TrailSync/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.1",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
     "date-fns": "^2.30.0",
